增加window主机控制模块相关内容【截图，启动进程，关闭进程】
Signed-off-by: CamilleFerros <80734960+CartmanORCamille@users.noreply.github.com>

--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,7 @@
 {
     "Path": {
-        "JX3_BVT": "E:\\sword3-products\\client\\bin64"
+        "Jx3BVTNeedCheck": "E:\\sword3-products\\client\\bin64",
+        "Jx3BVTClient": ""
     },
     "SVN": {
         "unimportantInformation": [
