SVN自动更新模块完成，添加二分法测试策略，补充一些控制台信息和cache写入字段
Signed-off-by: CamilleFerros <80734960+CartmanORCamille@users.noreply.github.com>

--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
     "Path": {
-        "Jx3BVTNeedCheck": "E:\\sword3-products\\client\\bin64",
+        "Jx3BVTNeedCheck": "E:\\sword3-products\\client\\bin64\\JX3ClientX64.exe",
         "Jx3BVTClient": ""
     },
     "SVN": {
