--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,9 @@
 {
     "Path": {
         "Jx3BVTNeedCheck": "E:\\sword3-products\\client\\bin64\\JX3ClientX64.exe",
-        "Jx3BVTClient": ""
+        "Jx3BVTWorkPath": "E:\\sword3-products\\client\\bin64",
+        "Jx3Remake": "JX3ClientX64.exe"
+        
     },
     "SVN": {
         "unimportantInformation": [
