--- a/config/config.json
+++ b/config/config.json
@@ -1,10 +1,4 @@
 {
-    "Path": {
-        "Jx3BVTNeedCheck": "E:\\sword3-products\\client\\bin64\\JX3ClientX64.exe",
-        "Jx3BVTWorkPath": "E:\\sword3-products\\client\\bin64",
-        "Jx3Remake": "JX3ClientX64.exe"
-        
-    },
     "SVN": {
         "unimportantInformation": [
             "Head_Client ShaderList commit,CodeRevision:"
@@ -12,5 +6,8 @@
     },
     "db": {
         "dbFilePath": "\\\\10.11.36.142\\BranchManagerPlus\\RevisionConfig.db"
+    },
+    "AbacusDictionary": {
+        "crashProcess": "DumpReport64.exe"
     }
 }
